tests/baselines/reference/jsdocFunctionTypeFalsePositive.errors.txt
/a.js(1,13): error TS1110: Type expected.
/a.js(1,13): error TS1099: Type argument list cannot be empty.
/a.js(1,14): error TS1005: '>' expected.


==== /a.js (3 errors) ====
    /** @param {<} x */
                ~
!!! error TS1110: Type expected.
                ~~
!!! error TS1099: Type argument list cannot be empty.
                 ~
!!! error TS1005: '>' expected.
    function f(x) {}
    